static/root.css
:root {
    --text-color: #2d2d2d;
}

body {
    background-color: #8bdceb;
    margin: 0;
    padding: 0;
    overflow-x: hidden;
    font-family: 'Rubik', sans-serif;
    font-optical-sizing: auto;
    font-weight: 800;
    font-style: normal;
    color: var(--text-color);
}

#content {
    width: 100%;
    position: relative;
    z-index: 0;
    max-width: 100%;
    overflow-x: hidden;
    margin: 0;
    padding: 0;
}

.splitter-container {
    width: 100%;
    overflow: hidden;
}

#splitter {
    width: 100%;
    object-fit: cover;
    object-position: bottom;
    display: block;
    position: relative;
    margin-top: -38rem;
    z-index: -1;
}

.footer {
    height: 100vh;
    background: white;
    display: flex;
    justify-content: center;
    align-items: center;
}

.footerText {
    text-align: center;
}

